# Simple2D

./: .clangd  CMakeLists.txt  Taskfile.yml  leak.supp
include/Simple2D/: Simple2D.h  Simple2D.hh  Simple2D.hpp
include/Simple2D/Geometry/: Line.hh  Rectangle.hpp  Triangle.h  Triangle.hh
include/Simple2D/Geometry/internal/: Base.h  TrianglePimpl.h
include/Simple2D/internal/: AppDelegate.h  MetalDelegate.h  Renderer.h  shader.h
include/Simple2D/objc/: AppDelegate.h  MetalDelegate.h  Renderer.h  Window.h  shader.h
include/Simple2D/objc/Geometry/: Base.h  Line.h  Rectangle.h  Triangle.h
src/: Simple2D.metal
src/Simple2D/: AppDelegate.mm  MetalDelegate.mm  Renderer.mm  Simple2D.mm  Window.mm
src/Simple2D/Geometry/: Line.mm  Rectangle.mm  Triangle.mm
tests/: 00-window.cc  01-primitive.cc  02-lines.cc  03-simplegraph.cc
